# Paritcle-File-Explosion

./: Backup.cpp  CMakeLists.txt  README.md  bitshift.cpp  bitwise and.cpp  check.cpp  main.cpp  rectangle.cpp  slow change color.txt
Classes/: Particles.cpp  Particles.h  Screen.cpp  Screen.h  Swarm.cpp  Swarm.h
libraries/: libraries.txt
